Solve onMouseOver issue on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@
 }
 
 .pointer {
-	cursor: pointer !important;
+	cursor: auto !important;
 }
 
 .cn-wrapper li {
